--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             height: 100vh;
             background-color: #f0f0f0;
             font-family: Arial, sans-serif;
+            overflow-y: hidden;
         }
 
         .calculator {
